journal/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - host: smth.example.info
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service: 
            name: frontend
            port: 
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: fileserver
            port:
              number: 80
